Atualizações do Projeto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,9 @@
     --cor-de-fonte-3: #667085;
     --cor-de-fundo: #ffffff;
     --cor-escura: #101828;
-   
+    --cor-branco-e-rosa: #f8f0ee;
+    --cor-da-borda: #EAECF0;
+    --cor-de-rodape: #98A2B3;
 
 /* Tipografia */
 
