--- a/css/metricas.css
+++ b/css/metricas.css
@@ -5,6 +5,7 @@
     padding: 0 var(--padding-xxl) 3rem var(--padding-xxl);
     gap: 20px;
     margin-top: 150px; 
+    margin-bottom: 6.5rem;
 }
 
 .cartao {
